--- a/Ejemplo2_HTML_estilo.html
+++ b/Ejemplo2_HTML_estilo.html
@@ -43,6 +43,7 @@
                 <img src="imagenes/IPN.jpg" ></img>
             </div>
         </div>
+        <a href="./Ejemplo3_HTML-CSS.html">Ejercicio 3 con uso de CSS</a>
     </body>
 </html>
 
