--- a/HolaMundo.html
+++ b/HolaMundo.html
@@ -20,6 +20,12 @@
 		<!-- Acá pondré la explicación -->
 		<p> Este es mi contenido <p>
 		<p> Este es mi texto general </p>
+		<br/>
+		<!-- Lorem Impsum para ver párrafos largos-->
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras faucibus, lectus ut lobortis imperdiet, odio enim aliquam magna, eu placerat augue ligula et tellus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque tincidunt augue sed est placerat, at ullamcorper ligula luctus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec consectetur massa lacus, non tempor lorem vulputate id. Aenean fringilla enim vulputate, elementum felis non, aliquam sem. Nunc velit ipsum, dapibus at augue eu, porttitor tempor lectus. Sed hendrerit semper pretium. Praesent sed dapibus risus, efficitur accumsan turpis. Aenean a pharetra dolor, eu viverra justo. Suspendisse placerat volutpat lacus, quis ullamcorper orci varius at. Aliquam erat volutpat. Vestibulum semper nibh a mi maximus feugiat. Nulla sed varius lorem. Praesent nec dui non augue tincidunt rutrum.
+		</p>
 		<hr />
+		<a href="./Ejemplo2_HTML_estilo.html">Ejercicio 2 con uso de estilo</a>
 	</body>
 </html>
